# TheoryCoinMiners

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dna_dataset_converter.sh  dna_exp.sh  main  main.cpp  rankers  requirements.txt  shortlex  shortlex.cpp  shortlex.hpp  shortlexv2.cpp  simon-tree  simon-tree.cpp
.github/: CODEOWNERS
animations/: README.md  check_x_ranker.txt  check_y_ranker.txt  main.py  py_x_ranker.txt  tree_visual.py
animations/data/: Node.py  (+3 more)
exp_data/: chimpanzee_shorter.txt  chimpanzee_testing.txt
exp_outs/: chimpanzee_shorter_out.txt  chimpanzee_testing_out.txt
include/: Node.h  Ranker.h  Trees.h  shortlex.hpp
outs/: out_match_sim_k.txt  out_tree.txt
src/: MatchSimK.cpp  Node.cpp  RandomTextGenerator.cpp  Ranker.cpp  Trees.cpp  dna_dataset_converter.cpp  dna_exp.cpp  json_test.cpp  main.cpp  match_sim_k.cpp  rt_exp.cpp  shortlex.cpp  simon-tree.cpp  simon_tree.cpp  tree_test.cpp  xy_tree.cpp
test_data/: example.json  match-sim-k-rest-test1.txt  match-sim-k-rest-test2.txt  match-sim-k-rest-test3.txt  match-sim-k-test1.txt  match-sim-k-test10.txt  match-sim-k-test11.txt  match-sim-k-test12.txt  match-sim-k-test13.txt  match-sim-k-test2.txt  match-sim-k-test3.txt  match-sim-k-test4.txt  match-sim-k-test5.txt  match-sim-k-test6.txt  match-sim-k-test7.txt  match-sim-k-test8.txt  match-sim-k-test9.txt  rt-test.example  rt-test1.txt  rt-test2.txt  rt-test3.txt  shortex-test1.txt  shortex-test2.txt  shortlex-test.example  shortlex-test2.txt  shortlex-test3.txt  xy-tree-test1.txt  xy-tree-test2.txt  xy-tree-test3.txt
(+36 files in other folders)
